--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-social-icons": "^6.18.0",
     "recharts": "^2.12.7",
+    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
